# django-simple-docs

./: .pre-commit-config.yaml  README.md  manage.py  pyproject.toml  requirements.txt  test-requirements.txt
.github/workflows/: build.yaml  ci.yaml  release.yml
django_simple_docs/: apps.py  urls.py
testing/: settings.py  urls.py  wsgi.py
tests/: test_simple_docs.py
