[project]
name = "django-simple-docs"
version = "1.0.0"
description = "A ready-to-use package to add drf-spectacular docs to your DRF API."
readme = "README.md"
requires-python = ">=3.14.1"
dependencies = [
    "django",
    "djangorestframework",
    "drf_spectacular",
]

[project.license]
file = "LICENSE"

[project.optional-dependencies]
test = [
    "covdefaults",
    "pytest",
    "pytest-cov",
    "pytest-django",
    "pytest-randomly",
    "pytest-xdist",
    "time-machine",
]

[build-system]
requires = [
    "setuptools",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]

[tool.autoflake]
recursive = true

[tool.coverage.run]
plugins = [
    "covdefaults",
]
omit = [
    "manage.py",
    "testing/*",
]

[tool.coverage.html]
directory = "artifacts/htmlcov/"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "testing.settings"
