[project]
name = "django-simple-docs"
version = "1.1.0"
description = "A ready-to-use package to add drf-spectacular docs to your DRF API."
license = "MIT"
license-files = [
    "LICENSE",
]
readme = "README.md"
requires-python = ">=3.14.1"
dependencies = [
    "django",
    "djangorestframework",
    "drf_spectacular",
]
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Topic :: Documentation",
    "Environment :: Web Environment",
    "Framework :: Django",
]

[project.urls]
"Home Page" = "https://github.com/mrswats/django-simple-docs"
Repository = "https://github.com/mrswats/django-simple-docs"
Github = "https://github.com/mrswats/django-simple-docs"

[project.optional-dependencies]
test = [
    "covdefaults",
    "pytest",
    "pytest-cov",
    "pytest-django",
    "pytest-randomly",
    "pytest-xdist",
    "time-machine",
]

[build-system]
requires = [
    "setuptools",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]

[tool.autoflake]
recursive = true

[tool.coverage.run]
plugins = [
    "covdefaults",
]
omit = [
    "manage.py",
    "testing/*",
]

[tool.coverage.html]
directory = "artifacts/htmlcov/"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "testing.settings"
